# basic_compiler

./: .gitignore  LICENSE  README.md  out  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
basic_compiler/: __init__.py  basic_argparser.py  basic_ast.py  basic_emitter.py  basic_exceptions.py  basic_lex.py  basic_parser.py  basic_symbol_set.py  basic_token.py  lex.py  main.py  token.py
tests/: class.b  error1.b  error2.b  error3.b  for.b  hello.b  if.b  math.b  struct.b  test1.basic  test_lex.py  test_parser.py  test_token.py
