[tool.poetry]
name = "basic_compiler"
version = "1.0.0"
description = "Compiler for a basic language"
authors = ["Shao Chien, Lu <s1111534@mail.yzu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0"

[project]
license = {file = "LICENSE"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
